--- a/_config.yml
+++ b/_config.yml
@@ -53,8 +53,16 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-highlighter: rouge
 permalink: /:title/
+# Jekyll 3 now only supports Kramdown for Markdown
+kramdown:
+  # Use GitHub flavored markdown, including triple backtick fenced code blocks
+  input: GFM
+  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    # Use existing pygments syntax highlighting css
+    css_class: 'highlight'
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
