--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kamal Mustafa
 description: CTO at Xoxzo Inc.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://k4ml.me/images/me-small.jpg
+avatar: https://k4ml.github.io/images/me-small.jpg
 
 #
 # Flags below are optional
