--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Kamal Mustafa
 
 # Short bio or description (displayed in the header)
-description: CTO at Xoxzo Inc.
+description: CTO at LaLoka Labs
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://kamal.koditi.my/images/me-small.jpg
